manifests/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
      version: v1
  template:
    metadata:
      labels:
        app: httpserver
        version: v1
    spec:
      serviceAccountName: httpserver
      containers:
      - image: gcr.io/yangguan-gke-dev/http-server:yangguan
        imagePullPolicy: IfNotPresent
        name: httpserver
        ports:
        - containerPort: 8000
