manifests/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        host: httpserver
        port:
          number: 8000
